# mvseg

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: mvseg.yaml
configs/experiment/: resunet_baseline.yaml  resunet_cldice.yaml  resunet_focal.yaml
configs/logger/: none.yaml  wandb.yaml
configs/model/: residual_unet.yaml
configs/trainer/: default.yaml
data/: README.md
docs/experiments/: cldice_aortic.md
docs/reports/: data_analysis_report.sample.md
nnunet/: README.md  convert_to_nnunet.py  run_inference.sh  run_training.sh
notebooks/: 01_data_exploration.ipynb
scripts/: inspect_data.py  prepare_splits.py
src/mvseg/: __init__.py  evaluate.py  losses.py  metrics.py  predict.py  train.py
src/mvseg/data/: analyze.py  datamodule.py  splits.py  transforms.py
src/mvseg/models/: lit_module.py  residual_unet.py
src/mvseg/utils/: logging.py  seed.py  viz.py
tests/: conftest.py  test_analyze.py  test_cldice.py  test_datamodule.py  test_metrics.py  test_model.py  test_transforms.py
